--- a/MobileMvxApp/BLE.Client/PagesViewModelsSet/Settings/PageSettingOperation.xaml
+++ b/MobileMvxApp/BLE.Client/PagesViewModelsSet/Settings/PageSettingOperation.xaml
@@ -42,7 +42,7 @@
             </StackLayout>
 
             <StackLayout Orientation="Horizontal">
-                <Label Text="Duplicate Elimination Rolling Window (0-255s)" WidthRequest="190"  VerticalOptions="Center" />
+                <Label Text="Duplicate Elimination Rolling Window (0-255s) (only for E710S)" WidthRequest="190"  VerticalOptions="Center" />
                 <Entry x:Name="entryDuplicateEliminationRollingWindow" Unfocused="entryDuplicateEliminationRollingWindowCompleted" HorizontalOptions="FillAndExpand" Keyboard="Text" WidthRequest="90" />
             </StackLayout>
 
