--- a/MobileMvxApp/BLE.Client.Droid/Resources/layout/SplashScreen.axml
+++ b/MobileMvxApp/BLE.Client.Droid/Resources/layout/SplashScreen.axml
@@ -2,11 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="#DFE0E0">
     <ImageView
         android:layout_width="wrap_content"
-        android:src="@drawable/icon"
+        android:src="@drawable/csl"
         android:layout_height="wrap_content"
-        android:scaleType="center"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:contentDescription="@string/Hello" />
 </RelativeLayout>
