--- a/MobileMvxApp/BLE.Client/PagesViewModelsSet/Settings/PageSettingAdministration.xaml
+++ b/MobileMvxApp/BLE.Client/PagesViewModelsSet/Settings/PageSettingAdministration.xaml
@@ -28,7 +28,14 @@
 				<Button x:Name="buttonShareDataFormat" HorizontalOptions="FillAndExpand" BorderWidth ="1" Clicked="buttonShareDataFormatClicked" />
 			</StackLayout>
 
-			<StackLayout Orientation="Horizontal">
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Keep Screen ON" WidthRequest="100" VerticalOptions="Center" />
+                <Label Text="Off" VerticalOptions="Center" />
+                <Switch x:Name="switchKeepScreenOn"/>
+                <Label Text="On" VerticalOptions="Center" />
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal">
 				<Label Text="New Tag Location" WidthRequest="100" VerticalOptions="Center" />
 				<Label Text="Last" VerticalOptions="Center" />
 				<Switch x:Name="switchNewTagLocation"/>
