--- a/MobileMvxApp/BLE.Client/PagesViewModelsSet/SpecialFuction/MultiBankInventory/PageMultiBankInventorySetting.xaml
+++ b/MobileMvxApp/BLE.Client/PagesViewModelsSet/SpecialFuction/MultiBankInventory/PageMultiBankInventorySetting.xaml
@@ -28,7 +28,7 @@
 		</StackLayout>
 			
     <StackLayout Orientation="Horizontal">
-      <Label Text="Count " WidthRequest="60" VerticalOptions="Center" />
+      <Label Text="Word Count" WidthRequest="60" VerticalOptions="Center" />
       <Entry x:Name="entryCount1" Text="{Binding entryCount1, Mode=TwoWay }" HorizontalOptions="FillAndExpand" />
 		</StackLayout>
 
@@ -48,7 +48,7 @@
 		</StackLayout>
 
 		<StackLayout Orientation="Horizontal">
-			<Label Text="Count " WidthRequest="60" VerticalOptions="Center" />
+            <Label Text="Word Count" WidthRequest="60" VerticalOptions="Center" />
 			<Entry x:Name="entryCount2" Text="{Binding entryCount2, Mode=TwoWay }" HorizontalOptions="FillAndExpand" Focused="InputFocused_174" Unfocused="InputUnfocused" />
 		</StackLayout>
 
