--- a/MobileMvxApp/BLE.Client/PagesViewModelsSet/Settings/PageAbout.xaml
+++ b/MobileMvxApp/BLE.Client/PagesViewModelsSet/Settings/PageAbout.xaml
@@ -13,7 +13,8 @@
           <Label x:Name="labelBtFwVer" Text="Bluetooth Firmware Version"/>
           <Label x:Name="labelRFIDFwVer" Text="RFID Firmware Version"/>
           <Label x:Name="labelSiliconlabFwVer" Text="SiliconLab IC Firmware Version"/>
-          <Label x:Name="labelSerialNumber" Text="Serial Number"/>
+          <Label x:Name="labelSerialNumber" Text="Reader Serial Number"/>
+            <Label x:Name="labelPCBSerialNumber" Text="PCB Serial Number"/>
         </StackLayout>
 
 		<StackLayout Orientation="Vertical" VerticalOptions="EndAndExpand" >
