--- a/MobileMvxApp/BLE.Client/PagesViewModelsSet/SpecialFuction/InventorytoWedgeForwarder/PageInventorytoWedgeForwarder.xaml
+++ b/MobileMvxApp/BLE.Client/PagesViewModelsSet/SpecialFuction/InventorytoWedgeForwarder/PageInventorytoWedgeForwarder.xaml
@@ -5,7 +5,7 @@
 					  xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
 					  xmlns:viewModels="clr-namespace:BLE.Client.ViewModels;assembly=BLE.Client"
              x:Class="BLE.Client.Pages.PageInventorytoWedgeForwarder"
-                Title="Inventory -> Wedge Forwarder">
+                Title="Java Wedge Forwarder">
 
   <StackLayout>
 
