--- a/MobileMvxApp/BLE.Client/PagesViewModelsSet/SpecialFuction/InventorytoWedgeForwarder/PageInventorytoWedgeForwarderSetting.xaml
+++ b/MobileMvxApp/BLE.Client/PagesViewModelsSet/SpecialFuction/InventorytoWedgeForwarder/PageInventorytoWedgeForwarderSetting.xaml
@@ -5,7 +5,7 @@
 					  xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
 					  xmlns:viewModels="clr-namespace:BLE.Client.ViewModels;assembly=BLE.Client"
 					  x:Class="BLE.Client.Pages.PageInventorytoWedgeForwarderSetting"
-					  Title="Inventory -> Wedge Forwarder Setting">
+					  Title="Java Wedge Forwarder Setting">
 
 
 	<StackLayout Padding="10, 20, 0, 0">
